Fixed overflow

--- a/files/style/message.less
+++ b/files/style/message.less
@@ -542,6 +542,7 @@
 	.userCredits {
 		font-size: @wcfSmallFontSize;
 		margin: @wcfGapSmall 0 0;
+		overflow: hidden;
 		padding: @wcfGapSmall 0 0;
 		
 		.dataList {
